[package]
name = "symploke"
version = "0.1.0"
edition = "2021"
authors = ["Salvatore Bertino sabert148@gmail.com"]

[dependencies]

[lib]
name = "symploke"
path = "src/lib.rs"

[[bin]]
name = "symploke"
path = "src/main.rs"

[dev-dependencies]
clippy = "0.0.3"
rustfmt = "0.10.0"

# mockall
# pretty_assertions
# cargo-test-macro
# proptest

[profile.release]
opt-level = 3
